BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/Customer_Feedback_Report_CFR__c.object-meta.xml
<CustomObject>
    <description>Capturing high level CFR data from the CFR system</description>
    <label>Customer Feedback Report (CFR)</label>
    <nameField>
        <label>CFR Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Feedback Reports (CFRs)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>