BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feedback Reports (CFRs)</relationshipLabel>
    <relationshipName>Customer_Feedback_Reports_CFRs</relationshipName>
    <type>Lookup</type>
</CustomField>