BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CFR_Created_Date__c</fullName>
    <label>CFR Created Date</label>
    <type>Date</type>
</CustomField>