BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Initiator__c.field-meta.xml
<CustomField>
    <fullName>CFR_Initiator__c</fullName>
    <label>CFR Initiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>