BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Link__c.field-meta.xml
<CustomField>
    <fullName>CFR_Link__c</fullName>
    <label>CFR Link</label>
    <type>Url</type>
</CustomField>