BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Number__c.field-meta.xml
<CustomField>
    <fullName>CFR_Number__c</fullName>
    <label>Customer Feedback Report (CFR) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>