BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Status__c.field-meta.xml
<CustomField>
    <fullName>CFR_Status__c</fullName>
    <label>CFR Status</label>
    <length>70</length>
    <type>Text</type>
</CustomField>