BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/CFR_Type__c.field-meta.xml
<CustomField>
    <fullName>CFR_Type__c</fullName>
    <label>CFR Type</label>
    <length>70</length>
    <type>Text</type>
</CustomField>