BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Next_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_to_Action__c</fullName>
    <label>Next to Action</label>
    <length>70</length>
    <type>Text</type>
</CustomField>