BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Next_to_action_comments__c.field-meta.xml
<CustomField>
    <fullName>Next_to_action_comments__c</fullName>
    <label>Next to action comments</label>
    <type>TextArea</type>
</CustomField>