BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Feedback Reports (CFRs)</relationshipLabel>
    <relationshipName>Customer_Feedback_Reports_CFRs</relationshipName>
    <type>Lookup</type>
</CustomField>