BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feedback Reports (CFRs) (Sales Rep)</relationshipLabel>
    <relationshipName>Customer_Feedback_Reports_CFRs1</relationshipName>
    <type>Lookup</type>
</CustomField>