BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/fields/Unibis_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Unibis_Account_Number__c</fullName>
    <label>Unibis Account Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>