BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/listViews/Africa_Open_CFRs.listView-meta.xml
<ListView>
    <fullName>Africa_Open_CFRs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CFR_Initiator__c</columns>
    <columns>CFR_Link__c</columns>
    <columns>CFR_Status__c</columns>
    <columns>CFR_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_to_Action__c</columns>
    <columns>Next_to_action_comments__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CFR_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CFR_Initiator__c</field>
        <operation>contains</operation>
        <value>REINARD ABBOTT,MARTIN STEYN,JAMES GOUWS,ANNAMARIE YOUNG,NATHAN MWENYA,FRANCOIS WILKINSON,BECHIR MEDSALEM</value>
    </filters>
    <label>Africa Open CFRs</label>
</ListView>