BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/listViews/AP_s_customers_CFR.listView-meta.xml
<ListView>
    <fullName>AP_s_customers_CFR</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>AP;s customers CFR</label>
</ListView>