BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/listViews/Cerro_Verde_CFR.listView-meta.xml
<ListView>
    <fullName>Cerro_Verde_CFR</fullName>
    <columns>Account__c</columns>
    <columns>CFR_Initiator__c</columns>
    <columns>NAME</columns>
    <columns>CFR_Link__c</columns>
    <columns>CFR_Number__c</columns>
    <columns>Next_to_Action__c</columns>
    <columns>Next_to_action_comments__c</columns>
    <columns>CFR_Created_Date__c</columns>
    <columns>CFR_Status__c</columns>
    <columns>CFR_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Cerro Verde</value>
    </filters>
    <label>Cerro Verde CFR</label>
</ListView>