BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/listViews/Leita_and_Will_CFRs.listView-meta.xml
<ListView>
    <fullName>Leita_and_Will_CFRs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CFR_Initiator__c</columns>
    <columns>CFR_Link__c</columns>
    <columns>CFR_Status__c</columns>
    <columns>CFR_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_to_Action__c</columns>
    <columns>Next_to_action_comments__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CFR_Initiator__c</field>
        <operation>equals</operation>
        <value>Leita Battersby</value>
    </filters>
    <filters>
        <field>CFR_Status__c</field>
        <operation>notEqual</operation>
        <value>CLOSED</value>
    </filters>
    <label>Leita&apos;s PN2 CFRs</label>
</ListView>