BradkenProduction/force-app/main/default/objects/Customer_Feedback_Report_CFR__c/listViews/Philippe_s_HCMRUS01_CFR_s.listView-meta.xml
<ListView>
    <fullName>Philippe_s_HCMRUS01_CFR_s</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CFR_Initiator__c</columns>
    <columns>CFR_Link__c</columns>
    <columns>CFR_Status__c</columns>
    <columns>CFR_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_to_Action__c</columns>
    <columns>Next_to_action_comments__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>HCMR</value>
    </filters>
    <filters>
        <field>CFR_Status__c</field>
        <operation>notEqual</operation>
        <value>closed</value>
    </filters>
    <label>Philippe&apos;s Open HITRUS01 CFRs</label>
</ListView>